...
            android:fontFamily="sans-serif-black"
            android:onClick="handleCurrentJobClick"
            android:text="@string/enter_edit_current_job"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnJobOffer"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:onClick="handleJobOffersClick"
            android:text="@string/enter_job_offers"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnComparisonWeights"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:onClick="handleComparisonSettingsClick"
...
